# Desk-Pet

./: .gitignore  CLAUDE.md  CONFIG-DEV.yaml.example  CONFIG.yaml  DES.md  DESIGN_ORIGIN.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  tsconfig.node.json  vite.config.ts  架构方案.md  架构设计文档.docx  说明.md  需求.md
docs/: DES.md  PRD-可配置静态资源管理.md
memory/: CANDY.md  MEMORY.md  Outside.md  Project.md  User.md
public/profiles/dark-purple/: profile.yaml
public/profiles/glass/: profile.yaml
public/profiles/sugar-pink/: character.yaml  profile.yaml
scripts/: generate_docx.py
sessions/: .gitkeep
skills/: check-weather.md  organize-files.md  summarize-code.md
src/: App.vue  settings-main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cursor.rs  mcp_bridge.rs  memory_cmd.rs  mod.rs  profile_cmd.rs  tool_exec.rs
src-tauri/src/window/: main_win.rs
src/components/: ChatPanel.vue  DebugBar.vue  NotificationCard.vue  SessionTabs.vue  SettingsPanel.vue  StreamView.vue  TitleBar.vue
src/components/winsim/: BootBios.vue  BootLogo.vue  DesktopScreen.vue  LoginScreen.vue  WinSim.vue
src/features/chat/: index.ts
src/services/: active-context.ts  animation.ts  chat.ts  command-handler.ts  config.ts  cooldown.ts  debug.ts  env.ts  expressions.ts  init.ts  logger.ts  test.ts  window-listener.ts  window-monitor.ts
src/styles/: fonts.css  global.css
(+96 files in other folders)
