[package]
name = "deskpet"
version = "0.1.0"
description = "糖糖桌宠"
edition = "2021"

[lib]
name = "deskpet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
