[package]
name = "deskpet"
version = "0.1.0"
description = "糖糖桌宠"
edition = "2021"

[lib]
name = "deskpet_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11", features = ["macos-private-api", "image-png", "tray-icon"] }
num_cpus = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_HiDpi"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
